# YOLODeployment

./: CMakeLists.txt  README.md  main.cpp
model/: epoch300.xml
